[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/objects/components/popups/popup_base.gd" type="Script" id=1]
[ext_resource path="res://resources/godot/popup_theme.tres" type="Theme" id=2]
[ext_resource path="res://resources/fonts/libre-baskerville/LibreBaskerville-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/godot/popup_panel.tres" type="StyleBox" id=4]

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 3 )

[node name="PopupBase" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0.27451, 0.258824, 0.368627, 0.313726 )

[node name="Content" type="PanelContainer" parent="."]
margin_left = 356.0
margin_top = 226.0
margin_right = 604.0
margin_bottom = 314.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="MarginContainer" type="MarginContainer" parent="Content"]
margin_left = 2.0
margin_top = 2.0
margin_right = 246.0
margin_bottom = 86.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Content/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 236.0
margin_bottom = 76.0

[node name="Title" type="Label" parent="Content/MarginContainer/VBoxContainer"]
margin_right = 228.0
margin_bottom = 28.0
custom_colors/font_color = Color( 1, 0.933333, 0.8, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = ExtResource( 4 )
text = "Ask a question here"
align = 1

[node name="HSeparator" type="HSeparator" parent="Content/MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 228.0
margin_bottom = 36.0

[node name="Choice" type="HBoxContainer" parent="Content/MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 228.0
margin_bottom = 68.0

[node name="OK" type="Button" parent="Content/MarginContainer/VBoxContainer/Choice"]
margin_right = 112.0
margin_bottom = 28.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "OK"

[node name="Cancel" type="Button" parent="Content/MarginContainer/VBoxContainer/Choice"]
margin_left = 116.0
margin_right = 228.0
margin_bottom = 28.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Error" type="MarginContainer" parent="."]
visible = false
margin_left = 420.0
margin_top = 524.0
margin_right = 540.0
margin_bottom = 540.0
size_flags_horizontal = 6
size_flags_vertical = 10
custom_constants/margin_bottom = 12

[node name="Error" type="PanelContainer" parent="Error"]
margin_right = 120.0
margin_bottom = 4.0
rect_min_size = Vector2( 120, 0 )

[node name="HBoxContainer" type="VBoxContainer" parent="Error/Error"]
margin_left = 2.0
margin_top = 2.0
margin_right = 118.0
margin_bottom = 60.0

[node name="MarginContainer" type="MarginContainer" parent="Error/Error/HBoxContainer"]
margin_right = 116.0
margin_bottom = 26.0
custom_constants/margin_right = 6
custom_constants/margin_left = 6

[node name="Label" type="Label" parent="Error/Error/HBoxContainer/MarginContainer"]
margin_left = 6.0
margin_right = 110.0
margin_bottom = 26.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 0.933333, 0.8, 1 )
text = "Error: ..."
align = 1

[node name="Button" type="Button" parent="Error/Error/HBoxContainer"]
margin_top = 30.0
margin_right = 116.0
margin_bottom = 58.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 10
text = "Close"

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="pressed" from="Content/MarginContainer/VBoxContainer/Choice/OK" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Content/MarginContainer/VBoxContainer/Choice/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Error/Error/HBoxContainer/Button" to="." method="_on_close_error_pressed"]
